--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCtype html> 
 <html>
     <head>
-       <link rel="stylesheet" type="text/css" href="https://legoman8304.github.io/style.css">
+       <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
     <body>
     <img class='img_2' src='2.png'/>
