--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCtype html> 
 <html>
+    <meta name="google-site-verification" content=" googlebdd534c5be3be9ae.html">
     <head>
-       <link rel="stylesheet" type="text/css" href="https://github.com/emetlevy/HANGINRADIOS/blob/main/mystyle.css">
+       <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
     <body>
     <img class='img_2' src='2.png'/>
