--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCtype html> 
 <html>
     <head>
-       <link rel="stylesheet" type="text/css" href="mystyle.css">
+      
+  <link rel = "stylesheet" type = "text/css" href = "myStyle.css" />
     </head>
     <body>
     <img class='img_2' src='2.png'/>
