--- a/open.html
+++ b/open.html
@@ -30,5 +30,51 @@
     </video>
     <br>
     <img class='img_10' src='10.png'/>
+        
+     <styel>
+         .mov_1{
+    width: 500px; 
+    position: absolute; left:20px;top:30px;
+}
+.img_2{
+    width: 500px; 
+    position: absolute; right:300px;top:100px;
+}
+.img_3{
+    position: absolute; left:40px;top:400px;
+    width: 500px; 
+}
+.img_4{
+    position: absolute; right:300px;top:700px;
+    width: 500px; 
+}
+.img_5{
+    position: absolute; right:500px;top:1000px;
+    width: 500px; 
+}
+.img_6{
+    position: absolute; right:300px;top:1300px;
+    width: 500px; 
+}
+.img_9{
+    position: absolute; right:10px;top:1600px;
+    width: 500px; 
+}
+.img_10{
+    position: absolute; right:500px;top:1900px;
+    width: 500px; }
+
+.mov_7{
+    position: absolute; left:90px;top:1400px;
+    width: 500px; }
+
+.mov_8{
+    position: absolute; right:300px;top:2560px;
+    width: 500px; 
+    padding-bottom: 50px;
+    
+}
+
+     </style> 
     </body>
 </html> 
