--- a/open.html
+++ b/open.html
@@ -5,9 +5,9 @@
   <link rel = "stylesheet" type = "text/css" href = "myStyle.css" />
     </head>
     <body>
-    <img class='img_2' src='2.png'/>
+    <img class="img_2" src="2.png"/>
     <br>
-    <img class='img_3' src='3.png'/>
+    <img class="img_3" src='3.png'/>
     <br>
     <img class='img_4' src='4.png'/>
     <br> 
