--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <br>
     <img class='img_4' src='4.png'/>
     <br>
-    <video class='mov_7' autoplay loop>
+    <video class='mov_7' controls autoplay loop>
         <source src="7.mp4" type="video/mp4">
     </video>
     <br>
     <img class='img_5' src='5.png'/>
     <br>
-    <video class='mov_8' autoplay loop>
+    <video class='mov_8' controls autoplay loop>
         <source src="8.mp4" type="video/mp4">
     </video>
     <br>
@@ -24,7 +24,7 @@
     <br>
     <img class='img_9' src='9.png'/>
     <br>
-    <video class='mov_1' autoplay loop>
+    <video class='mov_1'controls autoplay loop>
         <source  src="1.mp4" type="video/mp4">
     </video>
     <br>
