--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="mystyle.css">
     </head>
     <body>
+        <br>
+    <img class="Name" src="Name.png"/>
+    <br>
     <img class='img_2' src='2.png'/>
     <br>
     <img class='img_3' src='3.png'/>
